--- a/style.css
+++ b/style.css
@@ -5,20 +5,68 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
+button{
+  cursor: pointer;
+}
 
 body{
+  --mainColor: #6563ff;
   display: flex;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  background: #6563ff;
+  background: var(--mainColor);
+}
+
+section{
+  display: flex;
+  justify-content: center;
+  position: relative;
+  width: 500px;
+}
+
+#paletteWrap{
+  position: absolute;
+  display: flex;
+  width: 140px;
+  height: 400px;
+  left: 93%;
+}
+
+#palette{
+  display: flex;
+  flex-wrap: wrap;
+  width: 120px;
+  height: 100%;
+  background: #f8f8f8;
+  border-radius: 0 10px 10px 0;
+}
+
+#paletteArrow{
+  margin-top: 9px;
+  padding: 1.5px 3px 3px 0;
+  background: #f8f8f8;
+  width: 25px;
+  height: 40px;
+  border-radius: 0 10px 10px 0;
+} 
+
+#paletteArrow button{
+  border: none;
+  background: none;
+  width: 100%;
+  height: 100%;
+  color:var(--mainColor);
+  font-size: 1.5em;
 }
 
 .wrapper{
   padding: 25px;
   background: #f8f8f8;
   border-radius: 10px;
-  box-shadow: 0 3px 10px rgba(0,0,0,0.3);
+  /* box-shadow: 0 3px 10px rgba(0,0,0,0.3); */
+  max-width: 450px;
+  z-index: 10;
 }
 
 .cards, .card, .view{
@@ -79,7 +127,7 @@ body{
 
 .wrapper .card .front-view span{
   font-size: 1.8rem;
-  color:#6563ff;
+  color:var(--mainColor);
   font-weight: bold;
 }
 
@@ -130,19 +178,18 @@ nav div::after{
 }
 
 nav button{
-  cursor: pointer;
   background: none;
   padding: 1px 8px;
   margin: 0 20px;
   width: 65px;
   border-radius: 5px;
-  border: 2px solid #6563ff;
-  color:#6563ff;
+  border: 2px solid var(--mainColor);
+  color:var(--mainColor);
   font-size: 1em;
   transition: background-color 0.2s linear;
 }
 
 nav button:hover{
-  background: #6563ff;
+  background: var(--mainColor);
   color: white;
 }
