--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ section{
   width: 160px;
   height: 250px;
   left: 68%;
+  transition: all 0.2s linear;
 }
 
 #palette{
@@ -48,7 +49,7 @@ section{
   width: 45px;
   height: 45px;
   border:none;
-  border-radius: 40%;
+  border-radius: 20px;
   margin: 5px 5px 15px 5px;
 }
 
@@ -81,12 +82,23 @@ section{
 } 
 
 #paletteArrow button{
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border: none;
   background: none;
   width: 100%;
   height: 100%;
   color:var(--mainColor);
   font-size: 1.5em;
+}
+
+#paletteArrow button.right{
+  animation: rotate 0.3s linear forwards;
+}
+@keyframes rotate {
+  0%{transform: rotate(0deg);}
+  100%{transform: rotate(180deg);}
 }
 
 .wrapper{
