--- a/style.css
+++ b/style.css
@@ -57,13 +57,13 @@ section{
   background-color: #63afff;
 }
 #palette .paletteColor:nth-child(2){
-  background-color: #2ecc71;
+  background-color: #A2D8C0;
 }
 #palette .paletteColor:nth-child(3){
-  background-color: #e99b48;
+  background-color: #F2CC7B;
 }
 #palette .paletteColor:nth-child(4){
-  background-color: #e74c3c;
+  background-color: #FC7E7E;
 }
 #palette .paletteColor:nth-child(5){
   background-color: #34495e;
@@ -76,7 +76,7 @@ section{
   margin-top: 9px;
   padding: 1.5px 3px 3px 0;
   background: #f8f8f8;
-  width: 25px;
+  width: 30px;
   height: 40px;
   border-radius: 0 10px 10px 0;
 } 
